Refakturert testoppsett og ryddet opp i tester